@@ -48,6 +48,8 @@ Bug fixes / Maintenance
 - don't print empty lines when showing junitxml-filename
 - add optional boolean ignore_errors parameter to py.path.local.remove
 - fix terminal writing on win32/python2.4 
+- py.process.cmdexec() now tries harder to return properly encoded unicode objects 
+  on all python versions
 
 Changes between 1.3.0 and 1.3.1
 ==================================================
